@@ -501,8 +501,7 @@ Pendiente
 
 registro 4 de Next usa bits 6-0 no 4-0
 
-
-
-
--rehabilitar historial de cpu despues de smartload
-
+video layers
+-icono para ventana video layers
+-tamaño ventana por defecto
+-si maquina no es next ni tsconf ni... que aparece?
