@@ -131,6 +131,7 @@ extern void menu_storage(MENU_ITEM_PARAMETERS);
 extern void menu_storage_tape(MENU_ITEM_PARAMETERS);
 extern void menu_plusthreedisk(MENU_ITEM_PARAMETERS);
 
+extern void menu_video_layers(MENU_ITEM_PARAMETERS);
 
 extern void menu_msxcart(MENU_ITEM_PARAMETERS);
 extern void menu_z88_slot_insert(MENU_ITEM_PARAMETERS);
