@@ -9653,6 +9653,7 @@ zxvision_known_window_names zxvision_known_window_names_array[]={
     {"textadvmap",          "textadvmap",   menu_debug_textadventure_map_connections,bitmap_button_ext_desktop_text_adventure_map},
     {"tsconftbbluetilenav", "tile nav",menu_debug_tsconf_tbblue_msx_tilenav,bitmap_button_ext_desktop_tsconftbbluetilenav},
 	{"videoinfo",           "videoinfo",menu_debug_tsconf_tbblue_msx_videoregisters,bitmap_button_ext_desktop_videoinfo},
+    {"videolayers",         "videolayer",   menu_video_layers,bitmap_button_ext_desktop_userdefined},
     {"videooutput",         "video outp",   menu_video_output,bitmap_button_ext_desktop_videooutput},
     {"visualcassettetape",  "viscastap",    menu_visual_cassette_tape,bitmap_button_ext_desktop_visual_cassete_tape},
     {"visualfloppy",        "visual flp",   menu_visual_floppy,bitmap_button_ext_desktop_visualfloppy},
