@@ -69,6 +69,7 @@ Improved ZX Vision:
 - When selecting ZX Vision Style, it is applied on moving cursor
 - Improve cursor movement on menus when pressing PgDn/PgUp
 - Allow keys Home/End on windows
+- Video layers window can now be backgrounded
 - Warn on the resize mark when a window has to be enlarged (because there is text beyond current size)
 - Allow a window to disable scroll actions
 - Process switcher is located at bottom-left part of the display by default
